# zano_native_lib_package_android

./: README.md  jitpack.yml  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dowell/zanowalletandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dowell/zanowalletandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
zano_native_lib_package_android/: build.gradle
zano_native_lib_package_android/src/androidTest/java/com/dowell/zanowalletlib/: ExampleInstrumentedTest.kt
zano_native_lib_package_android/src/main/java/com/dowell/zanowalletlib/: PlainWalletApi.java
zano_native_lib_package_android/src/main/jni/: PlainWalletApi.cpp  com_dowell_zanowalletlib_PlainWalletApi.h  error_codes.h  plain_wallet_api.h
zano_native_lib_package_android/src/main/jniLibs/share/pkgconfig/: zlib.pc
zano_native_lib_package_android/src/test/java/com/dowell/zanowalletlib/: ExampleUnitTest.kt
zanowalletlib/: build.gradle
zanowalletlib/src/main/java/com/dowell/zanowalletlib/: PlainWalletApi.java
zanowalletlib/src/main/jni/: CMakeLists.txt  PlainWalletApi.cpp  com_dowell_zanowalletlib_PlainWalletApi.h  random_wrapper.cpp  random_wrapper.h
